fix: country code ui and form spacings

--- a/src/creators/creators.css
+++ b/src/creators/creators.css
@@ -116,7 +116,7 @@ video {
   display: flex;
   border-right: 0;
   border-radius: 8px 0 0 8px;
-  padding: 7px 11px;
+  padding: 4px 11px;
   padding-right: 4px;
   width: calc(100% - 24vh);
   background-color: #ffffff;
